# bazel-experiments

./: .bazelrc  .buildifier.json  .envrc  .gitattributes  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  multitool.lock.json  renovate.json  test.sh
.devcontainer/: devcontainer.json  on_create.sh  post_create.sh
.github/workflows/: ci.yaml
examples/001-hello-bazel/: BUILD.bazel  MODULE.bazel  README.md  hello.go  hello_test.go
examples/002-hello-gazelle/: BUILD.bazel  MODULE.bazel  README.md  go.mod
examples/003-hello-proto/: BUILD.bazel  MODULE.bazel  README.md
examples/003-hello-proto/go/: go.mod
examples/003-hello-proto/go/client/: BUILD.bazel  client_test.go  helpers.go  main.go
examples/003-hello-proto/go/server/: BUILD.bazel  helpers.go  main.go  server_test.go
examples/003-hello-proto/proto/: buf.gen.yaml  echo.proto
examples/003-hello-proto/tools/: preset.bazelrc
examples/004-proto-gazelle/: BUILD.bazel  MODULE.bazel  README.md
examples/004-proto-gazelle/go/: BUILD.bazel  go.mod
examples/004-proto-gazelle/go/client/: BUILD.bazel  client_test.go  helpers.go  main.go
examples/004-proto-gazelle/go/server/: BUILD.bazel  helpers.go  main.go  server_test.go
examples/004-proto-gazelle/proto/: BUILD.bazel  echo.proto
examples/005-proto-write-to-repo/: BUILD.bazel  MODULE.bazel  README.md
examples/005-proto-write-to-repo/bazel/: write_go_generated_srcs.bzl
examples/005-proto-write-to-repo/go/: BUILD.bazel  go.mod
examples/005-proto-write-to-repo/go/client/: BUILD.bazel  client_test.go  helpers.go  main.go
examples/005-proto-write-to-repo/go/server/: BUILD.bazel  helpers.go  main.go  server_test.go
examples/005-proto-write-to-repo/proto/: BUILD.bazel  echo.proto
examples/006-integration-testing/: BUILD.bazel  MODULE.bazel  README.md
examples/006-integration-testing/go/: BUILD.bazel  go.mod
examples/006-integration-testing/go/client/: BUILD.bazel  client_test.go  helpers.go  main.go
examples/006-integration-testing/go/client/integration/: BUILD.bazel  integration_test.go  messages_test.go
examples/006-integration-testing/go/integration/: BUILD.bazel  integration_test.go  messages_test.go
examples/006-integration-testing/go/server/: BUILD.bazel  helpers.go  main.go  server_test.go
examples/006-integration-testing/proto/: BUILD.bazel  echo.proto
examples/007-hello-oci/: BUILD.bazel  MODULE.bazel  README.md
examples/007-hello-oci/go/: BUILD.bazel  go.mod
examples/007-hello-oci/go/client/: BUILD.bazel  client_test.go  helpers.go  main.go
examples/007-hello-oci/go/server/: BUILD.bazel  helpers.go  main.go  server_test.go
examples/007-hello-oci/proto/: BUILD.bazel  echo.proto
examples/008-hello-macros/: BUILD.bazel  MODULE.bazel  README.md
examples/008-hello-macros/go/: BUILD.bazel  go.mod
examples/008-hello-macros/go/client/: BUILD.bazel  client_test.go  helpers.go  main.go
examples/008-hello-macros/go/server/: BUILD.bazel  helpers.go  main.go  server_test.go
examples/008-hello-macros/proto/: BUILD.bazel  echo.proto
examples/008-hello-macros/tools/macros/oci/: defs.bzl
examples/009-multirun-demo/: BUILD.bazel  MODULE.bazel  README.md
examples/009-multirun-demo/go/: BUILD.bazel  go.mod
examples/009-multirun-demo/go/client/: BUILD.bazel  client_test.go  helpers.go  main.go
examples/009-multirun-demo/go/server/: BUILD.bazel  helpers.go  main.go  server_test.go
examples/009-multirun-demo/proto/: BUILD.bazel  echo.proto
examples/010-bazel-query/: BUILD.bazel  MODULE.bazel  README.md  images.bzl
examples/010-bazel-query/go/: BUILD.bazel  go.mod
examples/010-bazel-query/go/client/: BUILD.bazel  client_test.go  helpers.go  main.go
examples/010-bazel-query/go/server/: BUILD.bazel  helpers.go  main.go  server_test.go
examples/010-bazel-query/proto/: BUILD.bazel  echo.proto
examples/010-bazel-query/scripts/: BUILD.bazel
examples/010-starzelle/: README.md
examples/010-starzelle/tools/starzelle/: print_paths.axl
examples/011-starzelle/: BUILD.bazel  MODULE.bazel  README.md
examples/012-starzelle-oci/: BUILD.bazel  MODULE.bazel  README.md
examples/012-starzelle-oci/go/: BUILD.bazel  go.mod
examples/012-starzelle-oci/go/client/: BUILD.bazel  client_test.go  helpers.go  main.go
examples/012-starzelle-oci/go/server/: BUILD.bazel  helpers.go  main.go  server_test.go
examples/012-starzelle-oci/proto/: BUILD.bazel  echo.proto
examples/012-starzelle-oci/tools/macros/oci/: defs.bzl
examples/013-gomocks_demo/: BUILD.bazel  MODULE.bazel  README.md
examples/013-gomocks_demo/go/: BUILD.bazel  go.mod
examples/013-gomocks_demo/go/client/: BUILD.bazel  client_mock_test.go  client_test.go  helpers.go  main.go
examples/013-gomocks_demo/go/server/: BUILD.bazel  helpers.go  main.go  server_test.go
examples/013-gomocks_demo/proto/: BUILD.bazel  echo.proto
examples/013-gomocks_demo/scripts/: generate_load_images.sh
examples/013-gomocks_demo/tools/starzelle/: oci.axl
examples/template/: MODULE.bazel
tools/: BUILD.bazel  gopackagesdriver.sh
