load("@gazelle//:def.bzl", "gazelle")
load("@rules_multirun//:defs.bzl", "multirun")

gazelle(name = "gazelle")

# gazelle:build_file_name BUILD.bazel
# gazelle:map_kind proto_library proto_library @protobuf//bazel:proto_library.bzl
# gazelle:proto package
# gazelle:proto_group go_package
# gazelle:go_grpc_compilers @rules_go//proto:go_grpc
# gazelle:proto_strip_import_prefix /proto
# gazelle:resolve go github.com/jtszalay/bazel-experiments/examples/multirun_demo/gen/echo/v1 //proto:echov1_go_proto

multirun(
    name = "load_images",
    commands = [
        "//go/client:client_oci_load",
        "//go/server:server_oci_load",
    ],
    jobs = 0,  # Set to 0 to run in parallel, defaults to sequential
)
