load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@rules_multirun//:defs.bzl", "multirun")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("//:images.bzl", "image_targets")

# gazelle:oci enabled

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + [
        "@aspect_gazelle_orion//:orion",
        # Any languages that depend on Gazelle's proto plugin must come after it.
    ],
    visibility = ["//visibility:public"],
)

gazelle(
    name = "gazelle",
    env = {
        "ORION_EXTENSIONS_DIR": "tools/starzelle",
    },
    gazelle = ":gazelle_binary",
)

# gazelle:prefix github.com/jtszalay/bazel-experiments/examples/gomocks_demo
# gazelle:build_file_name BUILD.bazel
# gazelle:map_kind proto_library proto_library @protobuf//bazel:proto_library.bzl
# gazelle:proto package
# gazelle:proto_group go_package
# gazelle:go_grpc_compilers @rules_go//proto:go_grpc
# gazelle:proto_strip_import_prefix /proto
# gazelle:resolve go github.com/jtszalay/bazel-experiments/examples/gomocks_demo/gen/echo/v1 //proto:echov1_go_proto

multirun(
    name = "load_images",
    commands = image_targets,
    jobs = 0,  # Set to 0 to run in parallel, defaults to sequential
)

sh_binary(
    name = "generate_load_images",
    srcs = ["//scripts:generate_load_images.sh"],
    visibility = ["//visibility:public"],
)
