module(name = "gomocks_demo")

bazel_dep(name = "toolchains_protoc", version = "0.6.0")

# Cannot currently upgrade protobuf past this version due to
# Unknown flag: --option_dependencies
bazel_dep(name = "protobuf", version = "31.0")

# This example depends on the Bazel modules rules_go and gazelle.
# Bazel modules are different than Go modules: Bazel modules are
# published on registry.bazel.build and have their own build files.
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "aspect_gazelle", version = "0.0.0")
git_override(
    module_name = "aspect_gazelle",
    commit = "7666d013145913a34aea52db9b135ca00b0e2f6f",
    remote = "https://github.com/aspect-build/aspect-gazelle.git",
)

bazel_dep(name = "aspect_gazelle_orion", version = "0.0.0")
git_override(
    module_name = "aspect_gazelle_orion",
    commit = "7666d013145913a34aea52db9b135ca00b0e2f6f",
    remote = "https://github.com/aspect-build/aspect-gazelle.git",
    strip_prefix = "language/orion",
)

# musl added so that we don't need a gcc or CC in path.
bazel_dep(name = "toolchains_musl", version = "0.1.27", dev_dependency = True)

# Configure rules_go to download and build with a specific version of Go.
#
# use_extension here loads the go_sdk Bazel module extension.
# A module extension is a bit of code that tells Bazel how to fetch things
# that aren't normal modules.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.5")

# Configure Gazelle to load the list of Go modules from go.mod using the
# go_deps module extension.
#
# go_deps fetches Go modules using 'go mod download'. It then generates
# build files for them using Gazelle.
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go:go.mod")

# Import repos generated by the go_deps module extension into this module.
#
# A Bazel repo is a separate source tree, either provided by a Bazel module
# (bazel_dep) or a module extension. go_deps creates a repo for each Go module.
# We must declare the modules we use directory from this repository, but the
# list does not need to be maintained manually: you can run 'bazel mod tidy' to
# update it automatically.
#
# Bazel repo names allow a limited set of characters, so Go module
# paths need to be transformed. Domains like golang.org are reversed, and
# characters other than letters and numbers are replaced with underscores (_).
# So "golang.org/x/net" becomes "org_golang_x_net".
#
# You can refer to targets within these repos with a label like
# "@org_golang_x_net//html".
use_repo(
    go_deps,
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_uber_go_mock",
)

bazel_dep(name = "tar.bzl", version = "0.7.0")
bazel_dep(name = "rules_oci", version = "2.2.7")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Declare external images you need to pull, for example:
# St
oci.pull(
    name = "alpine",
    # start without digest and platforms set,
    # when building bazel will tell us the buildozer command to make this repeatable.
    # tag = "latest",
    digest = "sha256:865b95f46d98cf867a156fe4a135ad3fe50d2056aa3f25ed31662dff6da4eb62",
    image = "alpine",
    platforms = [
        "linux/386",
        "linux/amd64",
        "linux/arm/v6",
        "linux/arm/v7",
        "linux/arm64/v8",
        "linux/ppc64le",
        "linux/riscv64",
        "linux/s390x",
        "unknown/unknown",
    ],
)

# For each oci.pull call, repeat the "name" here to expose them as dependencies.
use_repo(oci, "alpine", "alpine_linux_386", "alpine_linux_amd64", "alpine_linux_arm64_v8", "alpine_linux_arm_v6", "alpine_linux_arm_v7", "alpine_linux_ppc64le", "alpine_linux_riscv64", "alpine_linux_s390x", "alpine_unknown_unknown")

bazel_dep(name = "rules_multirun", version = "0.13.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "bazel_gomock", version = "0.2.0")
