load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "echov1_proto",
    srcs = ["echo.proto"],
    strip_import_prefix = "/proto",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "echov1_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/jtszalay/bazel-experiments/examples/proto_write_to_repo/gen/echo/v1",
    proto = ":echov1_proto",
    visibility = ["//visibility:public"],
)
