load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "server_lib",
    srcs = [
        "helpers.go",
        "main.go",
    ],
    importpath = "github.com/jtszalay/bazel-experiments/examples/hello_proto/server",
    visibility = ["//visibility:private"],
    deps = [
        "//go/gen",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "server_test",
    srcs = ["server_test.go"],
    embed = [":server_lib"],
    deps = ["//go/gen"],
)
