load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "client_lib",
    srcs = [
        "helpers.go",
        "main.go",
    ],
    importpath = "github.com/jtszalay/bazel-experiments/examples/proto_write_to_repo/client",
    visibility = ["//visibility:private"],
    deps = [
        "//go/gen/echo/v1:echo",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "client_test",
    srcs = ["client_test.go"],
    embed = [":client_lib"],
    deps = [
        "//go/gen/echo/v1:echo",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//test/bufconn",
    ],
)
