load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/jtszalay/bazel-experiments/examples/proto_write_to_repo/server",
    visibility = ["//visibility:private"],
    deps = [
        "//go/gen/echo/v1:echo",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
