load("@rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library", "go_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@tar.bzl", "tar")

go_library(
    name = "server_lib",
    srcs = [
        "helpers.go",
        "main.go",
    ],
    importpath = "github.com/jtszalay/bazel-experiments/examples/hello_oci/server",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:echov1_go_proto",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "linux_go_cross",
    platform = "@rules_go//go/toolchain:linux_amd64",
    target = ":server",
)

tar(
    name = "app",
    srcs = [":linux_go_cross"],
    mtree = [
        "usr/local/bin/server uid=0 gid=0 mode=0755 type=file content=$(execpath :linux_go_cross)",
    ],
)

oci_image(
    name = "image",
    base = "@alpine",
    entrypoint = ["/usr/local/bin/server"],
    tars = [":app"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["bazel-experiments/server:latest"],
)

go_test(
    name = "server_test",
    srcs = ["server_test.go"],
    embed = [":server_lib"],
    deps = ["//proto:echov1_go_proto"],
)
