load("@rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library", "go_test")
load("//tools/macros/oci:defs.bzl", "oci")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/jtszalay/bazel-experiments/examples/bazel_query/go/server",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:echov1_go_proto",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "linux_go_cross",
    platform = "@rules_go//go/toolchain:linux_amd64",
    target = ":server",
)

oci(
    name = "server_oci",
    target = ":linux_go_cross",
    visibility = ["//visibility:public"],
)

go_test(
    name = "server_test",
    srcs = ["server_test.go"],
    embed = [":server_lib"],
    deps = ["//proto:echov1_go_proto"],
)
