load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("//tools/macros/oci:defs.bzl", "oci")

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "github.com/jtszalay/bazel-experiments/examples/starzelle_oci/go/client",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:echov1_go_proto",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)

oci(
    name = "client_oci",
    target = ":client",
    visibility = ["//visibility:public"],
)

go_test(
    name = "client_test",
    srcs = ["client_test.go"],
    embed = [":client_lib"],
    deps = [
        "//proto:echov1_go_proto",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//test/bufconn",
    ],
)
